--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.google.firebase:firebase-auth:11.0.4'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -31,7 +33,13 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'com.android.support:support-annotations:27.1.1'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+
 }
+
+
+
+
 
 
 
