--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.otimware.myjournal">
-
+    <uses-permission android:name="android.permission.INTERNET
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +19,9 @@
         <activity
             android:name=".EntriesActivity"
             android:label="@string/title_activity_entries"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ViewEntry" />
+        <activity android:name=".AddEntryActivity"></activity>
     </application>
 
 </manifest>
