--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.otimware.myjournal">
-    <uses-permission android:name="android.permission.INTERNET
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +19,31 @@
         <activity
             android:name=".EntriesActivity"
             android:label="@string/title_activity_entries"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ViewEntry" />
-        <activity android:name=".AddEntryActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+
+
+        </activity>>
+
+        <activity
+            android:name=".ViewEntry"
+            android:parentActivityName=".EntriesActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".EntriesActivity"/>
+        </activity>>
+        <activity
+            android:name=".AddEntryActivity"
+            android:parentActivityName=".EntriesActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".EntriesActivity"/>
+        </activity>
     </application>
 
 </manifest>
